Wrong items order with template_icon_view #47185

Closed
opened 2016-01-15 11:29:28 +01:00 by Mikhail Rachinskiy · 6 comments

System Information
Windows 8.1 x64
Renderer: GeForce GTX 860M/PCIe/SSE2

Blender Version
Broken: 2.76.5 b211e41

Short description of error
Wrong items order (left to right, bottom to top) with bpy.types.UILayout.template_icon_view if it's located close to top of the screen.
Order is fine (left to right, top to bottom) if it's located down the screen.

You might say that that is intentional behavior reordering list either way depending on element's position to avoid half-hidden lists, but this does not applies to the template_ID_preview since brushes in sculpt mode are always ordered top to bottom.
This behavior is very unsettling, and the only reason I cannot use it in my add-on.

Exact steps for others to reproduce the error

  • Open attached blend file template_icon_view.blend
  • Text Editor → Run Script (creates two panels, one in Tool Shelf, second in Object properties window)

See items order

You should see something like this:
template_icon_view.png

**System Information** Windows 8.1 x64 Renderer: GeForce GTX 860M/PCIe/SSE2 **Blender Version** Broken: 2.76.5 b211e41 **Short description of error** Wrong items order *(left to right, bottom to top)* with `bpy.types.UILayout.template_icon_view` if it's located close to top of the screen. Order is fine *(left to right, top to bottom)* if it's located down the screen. You might say that that is intentional behavior reordering list either way depending on element's position to avoid half-hidden lists, but this does not applies to the `template_ID_preview` since brushes in sculpt mode are always ordered top to bottom. This behavior is very unsettling, and the only reason I cannot use it in my add-on. **Exact steps for others to reproduce the error** - Open attached blend file [template_icon_view.blend](https://archive.blender.org/developer/F274551/template_icon_view.blend) - Text Editor → Run Script (creates two panels, one in Tool Shelf, second in Object properties window) # See items order You should see something like this: ![template_icon_view.png](https://archive.blender.org/developer/F274552/template_icon_view.png)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MikhailRachinskiy

Added subscriber: @MikhailRachinskiy

This issue was referenced by 9137a44014

This issue was referenced by 9137a4401440d3f3206e989f49f3539079d685b8

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2016-01-15 15:19:42 +01:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Thank you, that was a lot.

Thank you, that was a lot.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47185
No description provided.