Fix T47185: Wrong items order with template_icon_view.